@@ -8,6 +8,7 @@ Changelog
 - Updated German translation.
 - Several improvements to the sample Bootstrap templates.
 - Support CACHEDIR.TAG spec issue #89
+- Sitemap.xml was not aware of Sites (#104).
 
 3.0.2 (2014-09-23)
 ------------------
